tests/tmytests/bad/field_collision_2.lat
class Collision {
    int a;
    int b;
    int a;
}

int main() {
    return 0;
}